--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+  
 # Compiled class file
 *.class
 
@@ -22,7 +23,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
+#maven files
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -32,7 +33,9 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+#intellij
+
 .idea/
+*.iml
